# StockAnalysis

./: .gitignore  500_ERROR_RESOLUTION_SUMMARY.md  AI_PDF_EXTRACTION_READY.md  AI_VALUATION_MODELS_ADDED.md  AMZN_SUPPORT_ADDED.md  AUTHENTICATION_SYSTEM_READY.md  AWS_USER_MANAGEMENT_IMPLEMENTATION.md  BACKEND_OPTIMIZATION_COMPLETE.md  BELL_EQUIPMENT_COMPANY_NAME_FIX_COMPLETE.md  BELL_EQUIPMENT_ISSUE_COMPLETELY_RESOLVED.md  CI_LINTING_FIXES.md  CI_STREAMLINING_SUMMARY.md  CI_TEST_FIXES_SUMMARY.md  COMPANY_NAME_SEARCH_EXPANSION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DYNAMODB_SETUP.md  FIXES_COMPLETE_SUMMARY.md  FRONTEND_DEPLOYMENT_STATUS.md  FRONTEND_DEPLOYMENT_SUCCESS.md  FRONTEND_FORMATTING_FIX.md  FRONTEND_ISSUES_RESOLVED.md  FRONTEND_TEST_FIXES.md  GITHUB_ACTIONS_UPDATE.md  GLOBAL_SEARCH_IMPLEMENTATION.md  LAMBDA_DEPLOYMENT_SUMMARY.md  MANUAL_DATA_IMPLEMENTATION_COMPLETE.md  MARKETSTACK_API_ACTIVATION_SUCCESS.md  MODEL_DROPDOWN_IMPLEMENTATION.md  Makefile  PDF_UPLOAD_ENDPOINTS_FIXED.md  PDF_UPLOAD_FINAL_SUCCESS.md  PDF_UPLOAD_IMPLEMENTATION_COMPLETE.md  PDF_UPLOAD_ISSUE_RESOLVED.md  PDF_UPLOAD_STATUS_FINAL.md  QUICK_REFERENCE.md  QUICK_START_DYNAMODB.md  README.md  REAL_FRONTEND_DEPLOYMENT_SUCCESS.md  SECURITY_FIXES_COMPLETE.md  (+232 more)
backend/: .env.performance  .env.production  .gitignore  .pre-commit-config.yaml  500_ERROR_FIXES_SUMMARY.md  AWS_OLLAMA_ARCHITECTURE.md  AWS_VCPU_LIMIT_INCREASE.md  BACKUP_DATA_SOURCES.md  BATCH_ANALYSIS_GUIDE.md  CACHING_SYSTEM_IMPLEMENTATION.md  DATABASE_ANALYSIS.md  DATABASE_GUIDE.md  DYNAMODB_ANALYSIS.md  Dockerfile  Dockerfile.lambda  EC2_AUTO_START_GUIDE.md  EC2_COST_OPTIMIZATION.md  ELASTIC_IP_SETUP.md  LLAMA_SETUP.md  OCR_FALLBACK_IMPLEMENTATION_SUMMARY.md  OLLAMA_CONCURRENT_SETUP.md  OLLAMA_EC2_SETUP.md  PDF_EXTRACTION_FIELDS.md  PDF_UPLOAD_SETUP.md  README.md  START_OLLAMA_GUIDE.md  TEXTRACT_MIGRATION.md  WATCHLIST_OPTIMIZATION_SUMMARY.md  ai_pdf_processor.py  api_gateway_lambda.py  batch_analyze_exchange.py  bedrock-policy-broad.json  bedrock-policy.json  cache_data.json  cache_data.pkl  check-all-streams.ps1  check-analyzer-logs.ps1  check-analyzer-logs2.ps1  check-lambda-perms.ps1  check-latest-logs.ps1  (+108 more)
backend/app/: __init__.py  background_tasks.py  cache_manager.py  main.py
backend/batch_results/: Custom_20251223.json  Custom_20260107.json  Custom_progress_20251223.json  Custom_progress_20260107.json
backend/lambda_deploy_pkg/: lambda_function.py
backend/lambda_deploy_pkg_auth/: lambda_function.py
backend/lambda_temp_stock_data_explore/: lambda_function.py
backend/scripts/: get_jse_tickers.py  manage_dashboards.py  migrate_add_analysis_weights.py  migrate_sqlite_to_dynamodb.py
backend/tests/: conftest.py  test_api_client.py  test_api_documentation.py  test_background_tasks.py  test_bedrock_ai_integration.py  test_cache_manager.py  (+45 more)
(+2332 files in other folders)
